--- a/src/stats/templates/mission.html
+++ b/src/stats/templates/mission.html
@@ -164,45 +164,24 @@
                             </a>
                         </div>
                         <div class="cell" style="width: 90px;">
-                            <a class="sort_by" href="?sort_by=-score_light">
-                                <img src="{% static 'img/icons/small/rating_light.png' %}" width="18" height="18"
-                                     alt="{% trans 'Score' %}" title="{% trans 'Fighter Score' %}">
-                            </a>
-                        </div>
-                        <div class="cell" style="width: 90px;">
-                            <a class="sort_by" href="?sort_by=-score_medium">
-                                <img src="{% static 'img/icons/small/rating_medium.png' %}" width="18" height="18"
-                                     alt="{% trans 'Score' %}" title="{% trans 'Attacker Score' %}">
-                            </a>
-                        </div>
-                        <div class="cell" style="width: 90px;">
-                            <a class="sort_by" href="?sort_by=-score_heavy">
-                                <img src="{% static 'img/icons/small/rating_heavy.png' %}" width="18" height="18"
-                                     alt="{% trans 'Score' %}" title="{% trans 'Bomber Score' %}">
-                            </a>
-                        </div>
-                        <div class="cell" style="width: 90px;">
                             <a class="sort_by" href="?sort_by=-score">
                                 <img src="{% static 'img/icons/small/score.png' %}" width="18" height="18"
                                      alt="{% trans 'Score' %}" title="{% trans 'Score' %}">
                             </a>
                         </div>
                     </div>
-                    {% for player in players %}
-                        <a class="row" href="{{ player.get_pilot_url }}">
+                    {% for pilot in pilots %}
+                        <a class="row" href="{{ pilot.get_pilot_url }}">
                             <div class="cell">{{ forloop.counter }}</div>
-                            <div class="cell" style="text-align: left;">{{ player.nickname }}</div>
-                            <div class="cell img">{% include 'inline/table_coal_pref_icon.html' with coal_pref=player.coal_pref %}</div>
-                            <div class="cell">{{ player.ak_total }}</div>
-                            <div class="cell">{{ player.gk_total }}</div>
-                            <div class="cell">{{ player.flight_time|seconds_to_time }}</div>
-                            <div class="cell">{{ player.kd }}</div>
-                            <div class="cell">{{ player.khr }}</div>
-                            <div class="cell">{{ player.accuracy }}%</div>
-                            <div class="cell">{{ player.score_light }}</div>
-                            <div class="cell">{{ player.score_medium }}</div>
-                            <div class="cell">{{ player.score_heavy }}</div>
-                            <div class="cell">{{ player.score }}</div>
+                            <div class="cell" style="text-align: left;">{{ pilot.nickname }}</div>
+                            <div class="cell img">{% include 'inline/table_coal_pref_icon.html' with coal_pref=pilot.coal_pref %}</div>
+                            <div class="cell">{{ pilot.ak_total }}</div>
+                            <div class="cell">{{ pilot.gk_total }}</div>
+                            <div class="cell">{{ pilot.flight_time|seconds_to_time }}</div>
+                            <div class="cell">{{ pilot.kd }}</div>
+                            <div class="cell">{{ pilot.khr }}</div>
+                            <div class="cell">{{ pilot.accuracy }}%</div>
+                            <div class="cell">{{ pilot.score }}</div>
                         </a>
                     {% endfor %}
                 </div>
