--- a/src/stats/templates/squad.html
+++ b/src/stats/templates/squad.html
@@ -72,40 +72,6 @@
                     <div class="num">{{ squad.flight_time|seconds_to_time }}</div>
                 </div>
                 <div class="item">
-                    <img src="{% static 'img/icons/big/rating_light.png' %}" width="" height="" title="" alt="">
-                    <div class="text">{% trans 'Position Fighter Rating' %}</div>
-                    <div class="num" title="{{ squad.rating_light }}">
-                        {% if rating_light_position %}
-                            <a href="{% url 'stats:squads' %}?page={{ page_light_position }}&tour={{ squad.tour_id }}&sort_by=-rating_light">{{ rating_light_position }}</a>
-                        {% else %}
-                            <span title="">?</span>
-                        {% endif %}
-                    </div>
-                </div>
-                <div class="item">
-                    <img src="{% static 'img/icons/big/rating_medium.png' %}" width="" height="" title="" alt="">
-                    <div class="text">{% trans 'Position Attacker Rating' %}</div>
-                    <div class="num" title="{{ squad.rating_medium }}">
-                        {% if rating_medium_position %}
-                            <a href="{% url 'stats:squads' %}?page={{ page_medium_position }}&tour={{ squad.tour_id }}&sort_by=-rating_medium">{{ rating_medium_position }}</a>
-                        {% else %}
-                            <span title="">?</span>
-                        {% endif %}
-                    </div>
-                </div>
-                <div class="item">
-                    <img src="{% static 'img/icons/big/rating_heavy.png' %}" width="" height="" title="" alt="">
-                    <div class="text">{% trans 'Position Bomber Rating' %}</div>
-                    <div class="num" title="{{ squad.rating_heavy }}">
-                        {% if rating_heavy_position %}
-                            <a href="{% url 'stats:squads' %}?page={{ page_heavy_position }}&tour={{ squad.tour_id }}&sort_by=-rating_heavy">{{ rating_heavy_position }}</a>
-                        {% else %}
-                            <span title="">?</span>
-                        {% endif %}
-                    </div>
-
-                </div>
-                <div class="item">
                     <img src="{% static 'img/icons/big/rating.png' %}" width="" height="" title="" alt="">
                     <div class="text">{% trans 'Position in Rating' %}</div>
                     <div class="num" title="{{ squad.rating }}">
@@ -265,6 +231,8 @@
                 </div>
                 {% endif %}
 
+
+
                 {% if squad.killboard_pve.aerostat %}
                 <div class="sub_item">
                     <div class="name">{% trans 'Aerostats' context 'total' %}</div>
@@ -413,7 +381,7 @@
                     <div class="num">{{ squad.sorties_total }}</div>
                 </div>
                 <div class="item">
-                    <div class="name">{% trans 'Lost aircraft/tanks' context 'total' %}</div>
+                    <div class="name">{% trans 'Lost aircrafts/tanks' context 'total' %}</div>
                     <div class="num">{{ squad.lost_aircraft }}</div>
                 </div>
                 <div class="item">
@@ -584,7 +552,7 @@
                     </div>
                     <div class="item">
                         <div class="text">
-                            {% trans 'K/L - Kills per Aircraft Lost/Tank Lost' %}
+                            {% trans 'K/L - Kills per Aircraft/Tank Lost' %}
                         </div>
                         <div class="num">
                             {{ squad.kl }}
