--- a/src/mod_rating_by_type/templates/mission.html
+++ b/src/mod_rating_by_type/templates/mission.html
@@ -188,21 +188,21 @@
                             </a>
                         </div>
                     </div>
-                    {% for player in players %}
-                        <a class="row" href="{{ player.get_pilot_url }}">
+                    {% for pilot in pilots %}
+                        <a class="row" href="{{ pilot.get_pilot_url }}">
                             <div class="cell">{{ forloop.counter }}</div>
-                            <div class="cell" style="text-align: left;">{{ player.nickname }}</div>
-                            <div class="cell img">{% include 'inline/table_coal_pref_icon.html' with coal_pref=player.coal_pref %}</div>
-                            <div class="cell">{{ player.ak_total }}</div>
-                            <div class="cell">{{ player.gk_total }}</div>
-                            <div class="cell">{{ player.flight_time|seconds_to_time }}</div>
-                            <div class="cell">{{ player.kd }}</div>
-                            <div class="cell">{{ player.khr }}</div>
-                            <div class="cell">{{ player.accuracy }}%</div>
-                            <div class="cell">{{ player.score_light }}</div>
-                            <div class="cell">{{ player.score_medium }}</div>
-                            <div class="cell">{{ player.score_heavy }}</div>
-                            <div class="cell">{{ player.score }}</div>
+                            <div class="cell" style="text-align: left;">{{ pilot.nickname }}</div>
+                            <div class="cell img">{% include 'inline/table_coal_pref_icon.html' with coal_pref=pilot.coal_pref %}</div>
+                            <div class="cell">{{ pilot.ak_total }}</div>
+                            <div class="cell">{{ pilot.gk_total }}</div>
+                            <div class="cell">{{ pilot.flight_time|seconds_to_time }}</div>
+                            <div class="cell">{{ pilot.kd }}</div>
+                            <div class="cell">{{ pilot.khr }}</div>
+                            <div class="cell">{{ pilot.accuracy }}%</div>
+                            <div class="cell">{{ pilot.score_light }}</div>
+                            <div class="cell">{{ pilot.score_medium }}</div>
+                            <div class="cell">{{ pilot.score_heavy }}</div>
+                            <div class="cell">{{ pilot.score }}</div>
                         </a>
                     {% endfor %}
                 </div>
