--- a/src/mod_rating_by_type/templates/squad.html
+++ b/src/mod_rating_by_type/templates/squad.html
@@ -75,10 +75,10 @@
                     <img src="{% static 'img/icons/big/rating_light.png' %}" width="" height="" title="" alt="">
                     <div class="text">{% trans 'Position Fighter Rating' %}</div>
                     <div class="num" title="{{ squad.rating_light }}">
-                        {% if rating_light_position %}
+                        {% if rating_light_position and squad.rating_light > 0 %}
                             <a href="{% url 'stats:squads' %}?page={{ page_light_position }}&tour={{ squad.tour_id }}&sort_by=-rating_light">{{ rating_light_position }}</a>
                         {% else %}
-                            <span title="">?</span>
+                            <span title="">-</span>
                         {% endif %}
                     </div>
                 </div>
@@ -86,10 +86,10 @@
                     <img src="{% static 'img/icons/big/rating_medium.png' %}" width="" height="" title="" alt="">
                     <div class="text">{% trans 'Position Attacker Rating' %}</div>
                     <div class="num" title="{{ squad.rating_medium }}">
-                        {% if rating_medium_position %}
+                        {% if rating_medium_position and squad.rating_medium > 0 %}
                             <a href="{% url 'stats:squads' %}?page={{ page_medium_position }}&tour={{ squad.tour_id }}&sort_by=-rating_medium">{{ rating_medium_position }}</a>
                         {% else %}
-                            <span title="">?</span>
+                            <span title="">-</span>
                         {% endif %}
                     </div>
                 </div>
@@ -97,10 +97,10 @@
                     <img src="{% static 'img/icons/big/rating_heavy.png' %}" width="" height="" title="" alt="">
                     <div class="text">{% trans 'Position Bomber Rating' %}</div>
                     <div class="num" title="{{ squad.rating_heavy }}">
-                        {% if rating_heavy_position %}
+                        {% if rating_heavy_position and squad.rating_heavy > 0 %}
                             <a href="{% url 'stats:squads' %}?page={{ page_heavy_position }}&tour={{ squad.tour_id }}&sort_by=-rating_heavy">{{ rating_heavy_position }}</a>
                         {% else %}
-                            <span title="">?</span>
+                            <span title="">-</span>
                         {% endif %}
                     </div>
 
