Fix formatting issues on main page if not all fields are full.

--- a/src/mod_rating_by_type/templates/main.html
+++ b/src/mod_rating_by_type/templates/main.html
@@ -164,6 +164,8 @@
                 </div>
                 {% endif %}
 
+                <div class="clearfix"></div>
+
                 {% if top_24_light %}
                 <div class="top_pilots" style="float: left;">
                     <div class="top_title">
@@ -216,6 +218,8 @@
                 </div>
                 {% endif %}
 
+                <div class="clearfix"></div>
+
                 {% if top_24_medium %}
                 <div class="top_pilots" style="float: left;">
                     <div class="top_title">
@@ -267,6 +271,8 @@
                     </div>
                 </div>
                 {% endif %}
+
+                <div class="clearfix"></div>
 
                 {% if top_24_heavy %}
                 <div class="top_pilots" style="float: left;">
