--- a/src/mod_rating_by_type/templates/pilot.html
+++ b/src/mod_rating_by_type/templates/pilot.html
@@ -104,6 +104,7 @@
                         {% endif %}
                     </div>
                 </div>
+                {% if split_rankings %}
                 <div class="item">
                     <img src="{% static 'img/icons/big/rating_light.png' %}" width="" height="" title="" alt="">
                     <div class="text">{% trans 'Position Fighter Rating' %}</div>
@@ -137,6 +138,7 @@
                         {% endif %}
                     </div>
                 </div>
+                {% endif %}
             </div>
 
             <div class="player_detailed" style="float: left;">
@@ -147,6 +149,7 @@
                     <div class="name">{% trans 'Total Aircraft' context 'total' %}</div>
                     <div class="num">{{ player.ak_total }}</div>
                 </div>
+
 
                 {% if player.killboard_pvp.aircraft_light %}
                 <div class="sub_item">
