--- a/src/mod_rating_by_type/templates/pilots.html
+++ b/src/mod_rating_by_type/templates/pilots.html
@@ -69,6 +69,7 @@
                                  alt="{% trans 'Gunnery Accuracy' %}" title="{% trans 'Gunnery Accuracy' %}">
                         </a>
                     </div>
+                    {% if split_rankings %}
                     <div class="cell" style="width: 90px;">
                         <a class="sort_by" href="?sort_by=-rating_light">
                             <img src="{% static 'img/icons/small/rating_light.png' %}" width="18" height="18"
@@ -87,6 +88,7 @@
                                  alt="{% trans 'Rating' %}" title="{% trans 'Bomber Rating' %}">
                         </a>
                     </div>
+                    {% endif %}
                     <div class="cell" style="width: 90px;">
                         <a class="sort_by" href="?sort_by=-rating">
                             <img src="{% static 'img/icons/small/rating.png' %}" width="18" height="18"
@@ -108,9 +110,11 @@
                     <div class="cell">{{ player.kd }}</div>
                     <div class="cell">{{ player.khr }}</div>
                     <div class="cell">{{ player.accuracy }}%</div>
+                    {% if split_rankings %}
                     <div class="cell" title="{{ player.rating_light }}">{{ player.rating_format_light }}</div>
                     <div class="cell" title="{{ player.rating_medium }}">{{ player.rating_format_medium }}</div>
                     <div class="cell" title="{{ player.rating_heavy }}">{{ player.rating_format_heavy }}</div>
+                    {% endif %}
                     <div class="cell" title="{{ player.rating }}">{{ player.rating_format }}</div>
                 </a>
                 {% endfor %}
