--- a/src/mod_rating_by_type/templates/squad_pilots.html
+++ b/src/mod_rating_by_type/templates/squad_pilots.html
@@ -92,6 +92,7 @@
                                  alt="{% trans 'Gunnery Accuracy' %}" title="{% trans 'Gunnery Accuracy' %}">
                         </a>
                     </div>
+                    {% if split_rankings %}
                     <div class="cell" style="width: 90px;">
                         <a class="sort_by" href="?sort_by=-rating_light">
                             <img src="{% static 'img/icons/small/rating_light.png' %}" width="18" height="18"
@@ -110,6 +111,7 @@
                                  alt="{% trans 'Bomber Rating' %}" title="{% trans 'Bomber Rating' %}">
                         </a>
                     </div>
+                    {% endif %}
                     <div class="cell" style="width: 90px;">
                         <a class="sort_by" href="?sort_by=-rating">
                             <img src="{% static 'img/icons/small/rating.png' %}" width="18" height="18"
@@ -131,9 +133,11 @@
                     <div class="cell">{{ pilot.kd }}</div>
                     <div class="cell">{{ pilot.khr }}</div>
                     <div class="cell">{{ pilot.accuracy }}%</div>
+                    {% if split_rankings %}
                     <div class="cell" title="{{ pilot.rating_light }}">{{ pilot.rating_format_light }}</div>
                     <div class="cell" title="{{ pilot.rating_medium }}">{{ pilot.rating_format_medium }}</div>
                     <div class="cell" title="{{ pilot.rating_heavy }}">{{ pilot.rating_format_heavy }}</div>
+                    {% endif %}
                     <div class="cell" title="{{ pilot.rating }}">{{ pilot.rating_format }}</div>
                 </a>
                 {% endfor %}
