--- a/src/mod_rating_by_type/templates/squads.html
+++ b/src/mod_rating_by_type/templates/squads.html
@@ -62,6 +62,7 @@
                                  alt="K/Hr" title="K/Hr">
                         </a>
                     </div>
+                    {% if split_rankings %}
                     <div class="cell" style="width: 90px;">
                         <a class="sort_by" href="?sort_by=-rating_light">
                             <img src="{% static 'img/icons/small/rating_light.png' %}" width="18" height="18"
@@ -80,6 +81,7 @@
                                  alt="{% trans 'Bomber Rating' %}" title="{% trans 'Bomber Rating' %}">
                         </a>
                     </div>
+                    {% endif %}
                     <div class="cell" style="width: 90px;">
                         <a class="sort_by" href="?sort_by=-rating">
                             <img src="{% static 'img/icons/small/rating.png' %}" width="18" height="18"
@@ -100,9 +102,11 @@
                     <div class="cell">{{ squad.flight_time|seconds_to_time }}</div>
                     <div class="cell">{{ squad.kd }}</div>
                     <div class="cell">{{ squad.khr }}</div>
+                    {% if split_rankings %}
                     <div class="cell" title="{{ squad.rating_light }}">{{ squad.rating_format_light }}</div>
                     <div class="cell" title="{{ squad.rating_medium }}">{{ squad.rating_format_medium }}</div>
                     <div class="cell" title="{{ squad.rating_heavy }}">{{ squad.rating_format_heavy }}</div>
+                    {% endif %}
                     <div class="cell" title="{{ squad.rating }}">{{ squad.rating_format }}</div>
                 </a>
                 {% endfor %}
